# maximus

./: .gitignore  FINAL_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  README.md  SOLANA_SETUP.md  SWAP_STATUS.md  TITAN_INTEGRATION.md  TITAN_TESTS.md  TRANSACTION_EXECUTION.md  package.json  pyproject.toml
scripts/: bundle-python.sh
src-desktop/: README.md  index.html  package-lock.json  package.json  vite.config.ts
src-desktop/src/: App.tsx
src-desktop/src/hooks/: useAgent.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md
src-tauri/resources/: .gitkeep
src-tauri/src/: cache.rs  commands.rs  lib.rs  main.rs  python.rs
src/maximus/: agent.py  cli.py  prompts.py
tests/: test_live_prices_quick.py  test_market_cipher.py  test_realtime_prices.py  test_titan_integration.py  test_websocket_debug.py
web/: .gitignore  API_SECURITY.md  README.md  SECURITY.md  SECURITY_FIXES_SUMMARY.md  SECURITY_IMPLEMENTATION_SUMMARY.md  SETUP.md  SETUP_ENCRYPTION.md  TROUBLESHOOTING.md  UPGRADE_NOTES.md  next.config.ts  package-lock.json  package.json  test-api-security.js
web/app/: globals.css  layout.tsx  page.tsx
web/components/: animated-line.tsx  browser-terminal.tsx  content-section.tsx  cta-section.tsx  delegation-manager.tsx  features-bento.tsx  features-list.tsx  footer-logo.tsx  footer-section.tsx  footer.tsx  hero-section.tsx  how-it-works.tsx  info-box.tsx  logo.tsx  logos.tsx  navigation.tsx  token-approval.tsx  wallet-connect.tsx  wallet-list.tsx  wallet-manager.tsx
web/fonts/: README.md
web/styles/: typography.css
(+89 files in other folders)
