[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maximus"
version = "0.1.0"
description = "AI agent for cryptocurrency research and analysis."
authors = []
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3.27",
    "langchain-openai>=0.3.35",
    "openai>=2.2.0",
    "plotext>=5.2.8",
    "prompt-toolkit>=3.0.0",
    "pydantic>=2.11.10",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "solana>=0.35.0",
    "solders>=0.22.0",
    "cryptography>=42.0.0",
    "base58>=2.1.1",
    "msgpack>=1.0.8",
    "websockets>=12.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "TA-Lib>=0.4.28",
]

[project.scripts]
maximus = "maximus.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
