[package]
name = "maximus-desktop"
version = "0.1.0"
description = "Maximus - Autonomous Solana Agent"
authors = ["Steven Sarmi"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
rmp-serde = "1.3"
webbrowser = "1.0"
once_cell = "1.19"
dotenvy = "0.15"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

